infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
# Deployment spec
spec: 
  replicas: 1
  # Tells dpeloyment to manage pods with label app: posts.
  # Can be changed to any label dihshss: posts
  selector: 
    matchLabels: 
      app: comments
  template:
  # Create a pod with label
    metadata:
      labels:
        app: comments
  # Pod spec
    spec: 
      containers:
      - name: comments
        image: dutt23/comments
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec: 
  selector: 
    app: comments
 # Default is cluster ip service
  type: ClusterIP
  ports:
  - name: comments
    protocol: TCP
    port: 4001
    targetPort: 4001
