infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
# Deployment spec
spec: 
  replicas: 1
  # Tells dpeloyment to manage pods with label app: posts.
  # Can be changed to any label dihshss: posts
  selector: 
    matchLabels: 
      app: posts
  template:
  # Create a pod with label
    metadata:
      labels:
        app: posts 
  # Pod spec
    spec: 
      containers:
      - name: posts
        image: dutt23/posts
---
apiVersion: v1
kind: Service
metadata:
  name: post-clusterip-srv
spec: 
  selector: 
    app: posts
 # Default is cluster ip service
  type: ClusterIP
  ports:
  - name: posts
    protocol: TCP
    port: 4000
    targetPort: 4000
